--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "baby-stream",
+  "name": "baby-manager",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=baby-stream:* nodemon --trace-warnings ./bin/www",
+    "dev": "DEBUG=baby-manager:* nodemon --trace-warnings ./bin/www",
     "lint": "eslint \"./**/*.js\"",
     "lint:fix": "eslint --fix \"./**/*.js\""
   },
