--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint:fix": "eslint --fix \"./**/*.js\""
   },
   "dependencies": {
+    "chrome-launcher": "^0.13.2",
+    "chrome-remote-interface": "^0.28.2",
     "chromecast-api": "^0.3.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
