--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "castv2": "^0.1.10",
+    "castv2-client": "^1.2.0",
     "chrome-launcher": "^0.13.2",
     "chrome-remote-interface": "^0.28.2",
     "chromecast-api": "^0.3.3",
