Adding touch.py

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:14.3-alpine
+# Make sure you have libavahi-compat-libdnssd-dev for debianesque for mdns
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
