--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mdns": "^2.5.1",
+    "mdns-js": "^1.0.3",
     "morgan": "~1.9.1",
     "node-rtsp-stream": "0.0.9",
     "ws": "^7.3.0"
