--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14.3-alpine
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm install --production
 COPY . .
 EXPOSE 3000
 CMD ["npm", "run", "start"]
