--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,3 +1,7 @@
 AUTO_START_STREAMS=true
 CONFIG_FILE=.data.json
 PUBLIC_URL=http://x.x.x.x:3000
+EWELINK_EMAIL=
+EWELINK_PASSWORD=
+EWELINK_REGION=
+LOCAL_NETWORK=192.168.0.X
