Recover from last item index

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 server/devices-cache.json
 server/arp-table.json
 server/public/files/
-server/.data.json
+server/.data.json*
 server/.env
 server/.idea
 client/.env
